--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -40,24 +40,30 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">请登录</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form">
+                        <form role="form" action="/login/" method="post">
+                        	{% csrf_token %}
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                    <input class="form-control" placeholder="用户名" name="username" type="text" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="密码" name="password" type="password" value="">
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                        <input name="remember" type="checkbox" value="Remember Me">记住我
                                     </label>
                                 </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <!-- Change this to a button or input when using this as a form 
+                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>-->
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-default">登录</button>
+                    				<span style="color:red;"> {{ status }}</span>
+                    				<input type="hidden" name="next" value="{{ next|escape }}" />
+                                </div>
                             </fieldset>
                         </form>
                     </div>
