Add dist folder of HTML templates, modify the gitignore
Signed-off-by: EinsteinYang <yangtianwei@outlook.com>

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -246,7 +246,7 @@
                 <!-- /.dropdown -->
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                        <i class="fa fa-user fa-fw"></i>{{user.first_name}} {{user.last_name}} <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="/auth/user/"><i class="fa fa-user fa-fw"></i> 用户资料</a>
