--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -524,21 +524,10 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="{% static "vendor/metisMenu/metisMenu.min.js" %}"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="{% static "vendor/raphael/raphael.min.js" %}"></script>
-    <script src="{% static "vendor/morrisjs/morris.min.js" %}"></script>
-    <script src="{% static "data/morris-data.js" %}"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="{% static "dist/js/sb-admin-2.js" %}"></script>
-
+    
+    <script src="{% static "jsApps/index.js" %}"></script>
+    
 </body>
-
-<script>
-loadSubPage('homepage.html');
-function loadSubPage(url) {
-	$("#page-wrapper").load("/static/" + url);
-}
-</script>
-
 </html>
