解决static路径传值问题
Signed-off-by: HuJH <360692780@qq.com>

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -526,8 +526,12 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static "dist/js/sb-admin-2.js" %}"></script>
-    
-    <script src="{% static "jsApps/index.js" %}"></script>
+	
+	<script>
+		var staticUrl = "{% static "" %}";
+	</script>
+	
+	<script src="{% static "jsApps/index.js" %}"></script>
     
 </body>
 </html>
