New branch for Machine Factory
Signed-off-by: Tianwei Yang <yangtianwei@outlook.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -345,6 +345,17 @@
 {#            <li class="active"><a href="index2.html" %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>#}
           </ul>{% endcomment %}
 {#        </li>#}
+          <li><a href="#"><i class="fa fa-edit"></i> 工单管理</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 生产资料</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 订单管理</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 采购</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 销售管理</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 质检</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 财务管理</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 供应商</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 客户</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 员工</a></li>
+          <li><a href="#"><i class="fa fa-edit"></i> 后台管理</a></li>
         <li class="treeview">
           <a href="#">
             <i class="fa fa-files-o"></i>
